--- a/index.html
+++ b/index.html
@@ -42,48 +42,12 @@
         opacity: 1;
         overflow: hidden;
         position: relative;
-        transition: transform 0.3s ease-in-out, opacity 0.3s ease;
-      }
-
-      .image-containers img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
       }
 
       .image-size1 {
         width: 100%;
         height: 100%;
         object-fit: cover;
-      }
-
-      .image-titles {
-        position: absolute;
-        width: 100%;
-        top: 40%;
-        color: white;
-        font-family: "Poppins", sans-serif;
-        font-size: 60px;
-        font-weight: 650;
-        font-style: italic;
-        text-align: center;
-        opacity: 0;
-        transition: opacity 0.3s ease-in-out;
-      }
-
-      .image-containers:hover img {
-        opacity: 0.1;
-        transform: scale(1.01);
-      }
-
-      .image-containers:hover .image-titles {
-        opacity: 1;
-      }
-
-      .image-containers a {
-        text-decoration: none;
-        color: inherit;
       }
 
       /*contact info footer */
@@ -167,7 +131,6 @@
         padding: 5px;
         float: right;
         display: flex;
-
       }
 
       #nav a {
@@ -308,43 +271,35 @@
         }
       }
 
-      /* header quote animation */
-
-      headingcontentani {
-        display: inline-block;
-        position: relative;
-        font-size: 55px;
-        width: 45%;
-        font-family: "Poppins", sans-serif;
-        font-weight: 300;
-        text-align: left;
-        animation-name: head-Name;
-        animation-duration: 2.4s;
-        color: #FFFFFF;
-        font-style: italic;
-        border-style: solid;
-        border-color: #FFFFFF;
-        border-width: 3px;
-        padding: 100px;
-
-      }
-
       /* headers and paragraphs containers */
+.info-box {
+    width: 15%; 
+    padding: 10px;
+    position: absolute;
+    top: 300px;
+    left: 53px;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+}
 
-      h1 {
-        padding: 20px;
-        font-size: 100px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        position: absolute;
-        width: 100%;
-        text-align: center;
-        font-family: "Poppins", sans-serif;
-        font-weight: 600;
-        color: #FFFFFF;
-        top: 1300px;
-      }
+.info-header {
+    font-size: 32px;
+    font-family: "Poppins", sans-serif;
+    color: #FFFFFF;
+    font-weight: 600;
+    margin: 0;
+    width: 100%; 
+}
+
+.info-text {
+    font-size: 14px;
+    margin: 0;
+    padding: 0;
+    width: 100%; 
+    text-align: left;
+}
+
 
       .decor-underlineheading2 {
         position: relative;
@@ -395,21 +350,6 @@
         }
       }
 
-
-      h2 {
-        padding: 20px;
-        font-size: 60px;
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-        position: absolute;
-        width: 45%;
-        font-family: "Poppins", sans-serif;
-        font-weight: 600;
-        color: #FFFFFF;
-        top: 4300px;
-      }
-
       .paragraphcontent {
         display: block;
         position: absolute;
@@ -437,19 +377,18 @@
       <div class="image-containers">
         <a href="3DDesign.html">
           <img src="In_Good_Spirits0072-Compressed.png" alt="3D render of a Ghibli Landscape with moving grass, flowers, and leaves." class="image-size1">
-          <div class="image-titles">
-            <a href="portfolio.html">3D Design</a>
-          </div>
         </a>
       </div>
-
     </div>
-
-
-    <div class="paragraphcontent">
-
-      <p> Date: Dec 2023 - Mar 2025.  </p>
-    </div>
+    
+<div class="info-box">
+    <h1 class="info-header">Date.</h1>
+    <p class="info-text">2024-2025</p>
+</div>
+    
+    <div class="paragraphcontent"> <p>
+      dsfasd
+      </p></div>
 
     <div class="contact-info-bar">
       <ul>
