--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
     <!-- gallery 1 -->
     <div class="gallerybox">
       <h1 class="gallery-title"><u><a href="https://youtu.be/Mmj8NMkNJA8">In Good Spirits</a></u></h1>
-      <h1 class="gallery-date">Jan 2024 - April 2024.</h1>
+      <h1 class="gallery-date">Jan. 2023 - Mar. 2025.</h1>
       <p class="gallery-p"> This personal project took around two years to complete. The project began when I started using Blender in September 2023. The challenge throughout this project was learning how to use the 3D software and how I can improve upon my past renders.</p>
       <div class="image-gallery">
 
